[CHANGE] Deleted old project files beceause they were obsolete. [FIX] Multilanguage should now be fixed for once! [FEATURE] Multilanguage buttons working (1/2)

--- a/Unity/Farm Clicker/Farm Clicker.csproj
+++ b/Unity/Farm Clicker/Farm Clicker.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Assets\Scripts\GetLocalizedText.cs" />
     <Compile Include="Assets\Scripts\Localization.cs" />
     <Compile Include="Assets\Scripts\PlayerCustomization.cs" />
+    <Compile Include="Assets\Scripts\PlayerLookInGame.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
