[FEATURE] Day & Night part one [FIX] Some bug fixes

--- a/Unity/Farm Clicker/Assembly-CSharp.csproj
+++ b/Unity/Farm Clicker/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\AnimMenu.cs" />
+     <Compile Include="Assets\Scripts\DayNightSwitch.cs" />
      <Compile Include="Assets\Scripts\GetLocalizedText.cs" />
      <Compile Include="Assets\Scripts\Localization.cs" />
      <Compile Include="Assets\Scripts\PlayerCustomization.cs" />
