[FEATURE] Money is spawn by the click at mouse position (2/2) [FEATURE] Progress bar for a task [FEATURE] Automatic money every X seconds [FEATURE] Combo click after X corn dollars passed [CHANGE] More money related stuff

--- a/Unity/Farm Clicker/Assembly-CSharp.csproj
+++ b/Unity/Farm Clicker/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
      <Compile Include="Assets\Scripts\PlayerCustomization.cs" />
      <Compile Include="Assets\Scripts\PlayerLookInGame.cs" />
      <Compile Include="Assets\Scripts\ScoreManager.cs" />
+     <Compile Include="Assets\Scripts\TaskCompleted.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
